[tool.poetry]
name = "email-expose"
version = "0.1.2"
license = "MIT"
description = ""
authors = ["Cristiano Henrique <cristianovisk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"
rich = "^13.7.0"
lxml = "^5.1.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
typer = "^0.9.0"
openpyxl = "^3.1.2"

[tool.poetry.scripts]
email_expose = "email_expose.expose_consult:app"

[tool.poetry.urls]
"Documentação" = "https://github.com/cristianovisk/EmailExpose/blob/main/README.md"
"Código" = "https://github.com/cristianovisk/EmailExpose"
"Bug Tracker" = "https://github.com/cristianovisk/EmailExpose/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
